@@ -1,4 +1,12 @@
 ==========================================
+08/05/2025:
+
+## Add:
+
+## Update:
+- POST /services: Add avatar, hidden field
+
+==========================================
 28/04/2025:
 
 ## Booking:
